--- a/2d.html
+++ b/2d.html
@@ -12,7 +12,7 @@
             padding: 0;
         }
         nav {
-            background-color: #333;
+            background-color: black;
             color: #fff;
             text-align: center;
             padding: 10px 0;
